--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "{{projectName}}",
+  "name": "coffeeshop",
   "private": true,
-  "description": "Личный проект «{{projectTitle}}» от HTML Academy",
+  "description": "Личный проект «Coffeeshop» от HTML Academy",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.0.0",
     "autoprefixer": "10.4.0",
