--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,9 @@ jobs:
         uses: actions/checkout@v2.3.1
         with:
           persist-credentials: false
+          
+      - name: Install 🔧
+        run: npm install
 
       - name: Build 👷
         run: npm start
